Fix footer social spacing

--- a/scss/site/_structure.scss
+++ b/scss/site/_structure.scss
@@ -197,8 +197,9 @@ footer {
 		ul {
 			font-size: rem-calc(22px);
 			color: $light-grey;
+			margin-left: 0;
 			li {
-				padding: rem-calc(5);
+				padding: rem-calc(5 5 5 0);
 				margin: 0;
 			}
 		}
